# crunch

./: CMakeLists.txt
crnlib/: crn_matrix.h  crn_miniz.cpp
inc/: crn_decomp.h
